--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- CSSS -->
     <link rel="stylesheet" href="style.css"/>
 
-    <title>Ndoriyo Farm</title>
+    <title>Muhamad Nur Ilyas</title>
   </head>
   <body id="home" style="background-color: #D9DCFF;">
     <!-- Navbar -->
