--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <!-- Footer -->
   <footer style="background-color: #00008B;" class="p-3 pb-5">
     <p class="text-center text-white">Created with <i class="bi bi-emoji-smile"></i> by <a
-        href="beasiswa-master/index.php" class="text-white" fw-bold>Muhamad Nur Ilyas</a>
+        href="beasiswa-master/index.html" class="text-white" fw-bold>Muhamad Nur Ilyas</a>
       <script type="text/javascript">
         document.write(new Date().getFullYear());
       </script>
